--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -18,7 +18,7 @@ jobs:
             - environment: prod
     steps:
       - uses: actions/checkout@v3
-      - uses: ./topics/registry/.github/workflows/registry.yml
+      - uses: ./topics/registry/.github/workflows/
   terraform:
     name:   ${{ matrix.environment }}
     runs-on: ubuntu-latest
