--- a/topics/registry/action.yml
+++ b/topics/registry/action.yml
@@ -13,7 +13,7 @@ runs:
   - uses: Swatinem/rust-cache@v2
   - name: Release Build
     shell: bash
-    run: cargo lambda build --release --output-format zip --manifest-path topics/registry/Cargo.toml
+    run: cargo lambda build --release --output-format zip --manifest-path topics/registry/Cargo.toml --bin
 
   - name: Upload artifacts
     uses: actions/upload-artifact@v2
