--- a/topics/registry/action.yml
+++ b/topics/registry/action.yml
@@ -16,7 +16,13 @@ runs:
     run: cargo lambda build --release --output-format zip --manifest-path topics/registry/Cargo.toml
   - name: show output
     shell: bash
-    run: ls -l /home/runner/work/backend/backend/topics/registry/target/lambda/registry_lambda/
+    run: ls -l /home/runner/work/backend/backend/topics/registry
+  - name: show output
+    shell: bash
+    run: ls -l /home/runner/work/backend/backend/topics/registry/target
+  - name: show output
+    shell: bash
+    run: ls -l /home/runner/work/backend/backend/topics/registry/target/lambda
   # - name: Upload artifacts
   #   uses: actions/upload-artifact@v2
   #   with: 
