--- a/topics/registry/action.yml
+++ b/topics/registry/action.yml
@@ -13,10 +13,11 @@ runs:
       tag: v0.14.0
       platform: linux
       arch: x86_64
+  - uses: goto-bus-stop/setup-zig@v2
   - uses: Swatinem/rust-cache@v2
   - name: Release Build
     shell: bash
-    run: cargo lambda build --release --output-format zip --manifest-path=topics/registry/Cargo.toml
+    run: cargo lambda build --release --output-format=zip --manifest-path=topics/registry/Cargo.toml
   - name: show output
     shell: bash
     run: ls -l /home/runner/work/backend
