--- a/topics/registry/action.yml
+++ b/topics/registry/action.yml
@@ -18,30 +18,12 @@ runs:
   - name: Release Build
     shell: bash
     run: cargo lambda build --release --output-format=zip --manifest-path=topics/registry/Cargo.toml
-  - name: show output
-    shell: bash
-    run: ls -l /home/runner/work/backend
-  - name: show output
-    shell: bash
-    run: ls -l /home/runner/work/backend/backend
-  - name: show output
-    shell: bash
-    run: ls -l /home/runner/work/backend/backend/topics
-  - name: show output
-    shell: bash
-    run: ls -l /home/runner/work/backend/backend/topics/registry
-  - name: show output
-    shell: bash
-    run: ls -l /home/runner/work/backend/backend/topics/registry/target
-  # - name: show output
-    # shell: bash
-    # run: ls -l /home/runner/work/backend/backend/topics/registry/target/lambda
-  # - name: Upload artifacts
-  #   uses: actions/upload-artifact@v2
-  #   with: 
-  #     name: bootstrap.zip
-  #     path: topics/registry/target/lambda/registry_lambda
-  #     if-no-files-found: error
+  - name: Upload artifacts
+    uses: actions/upload-artifact@v2
+    with: 
+      name: bootstrap.zip
+      path: topics/registry/target/lambda/registry_lambda
+      if-no-files-found: error
   # terraform:
   #   needs: build
   #   name:   ${{ matrix.environment }}
