--- a/topics/registry/action.yml
+++ b/topics/registry/action.yml
@@ -15,6 +15,8 @@ runs:
       arch: x86_64
   - uses: goto-bus-stop/setup-zig@v2
   - uses: Swatinem/rust-cache@v2
+    with:
+      workspaces: "topics/registry/target/"
   - name: Release Build
     shell: bash
     run: cargo lambda build --release --output-format=zip --manifest-path=topics/registry/Cargo.toml
