--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -20,6 +20,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./topics/registry/
   terraform:
+    needs: build
     name:   ${{ matrix.environment }}
     runs-on: ubuntu-latest
     strategy:
@@ -33,6 +34,10 @@ jobs:
          AWS_DEFAULT_REGION: eu-central-1
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: bootstrap.zip
+          path: target/lambda/registry_lambda/
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_wrapper: false
