fixup cache path

--- a/topics/registry/action.yml
+++ b/topics/registry/action.yml
@@ -16,7 +16,7 @@ runs:
   - uses: goto-bus-stop/setup-zig@v2
   - uses: Swatinem/rust-cache@v2
     with:
-      workspaces: "topics/registry/target/"
+      workspaces: "topics/registry"
   - name: Release Build
     shell: bash
     run: cargo lambda build --release --output-format=zip --manifest-path=topics/registry/Cargo.toml
