control led state via api gateway

--- a/db/microservices/lamp/Cargo.toml
+++ b/db/microservices/lamp/Cargo.toml
@@ -13,3 +13,5 @@ aws-config = "0.51.0"
 aws-sdk-iotdataplane = "0.21.0"
 aws-smithy-types = "0.51.0"
 aws-smithy-http = "*"
+aws_lambda_events = "0.7.3"
+protocol = { git = "https://github.com/rust-iot-things/protocol" }
